# robocup_3d_simulation

./: LICENSE  README.md  robocup3d_install.sh
gameControllerPlugin/: CMakeLists.txt  GameControllerPlugin.cc  GameControllerPlugin.hh
gameControllerPlugin/cmake/: CMakeLists.txt
models/: agent.sdf  nao_soccer.sdf  nao_soccer_blue.sdf  nao_soccer_red.sdf  teamA_1.sdf  teamA_2.sdf  teamB_1.sdf  teamB_2.sdf
models/nao_meshes/: LICENSE.TXT  README  Uninstall NAO meshes.desktop  model.config  model.sdf  model.sdf.mesh_collisions  model.sdf.robocup3d  model.sdf.simplified_collisions  nao_meshes  setup.sh
models/nao_meshes/meshes/V40/collision/: LAnklePitch.ply  LAnkleRoll.ply  Phalax.ply  RShoulderRoll.dae
models/nao_meshes/meshes/V40/visual/: HeadPitch.dae  HeadPitchLaser.dae  HeadPitchLaser.obj.mtl  HeadYaw.dae  LAnklePitch.dae  LAnkleRoll.dae  LAnkleRoll.obj.mtl  LElbowRoll.dae  LElbowRoll.obj.mtl  LElbowRollComplete.dae  LHipPitch.dae  LHipRoll.dae  LHipYawPitch.dae  LKneePitch.dae  LShoulderPitch.dae  LShoulderRoll.dae  LYawPitch.dae  LYawPitch.obj.mtl  Phalax.dae  PhalaxEnd.dae  RAnklePitch.dae  RAnkleRoll.dae  RElbowRoll.dae  RElbowRollComplete.dae  RHipPitch.dae  RHipRoll.dae  RHipYawPitch.dae  RKneePitch.dae  RKneePitch.obj.mtl  RShoulderPitch.dae  RShoulderRoll.dae  RYawPitch.dae  Torso.dae  Torso.obj.mtl  WristYaw.dae  test.dae
models/nao_meshes/plugin/teleopNaoPlugin/: CMakeLists.txt  TeleopNaoPlugin.cc  TeleopNaoPlugin.hh
models/nao_meshes/scripts/: converter.py  parse_mesh_b_human.py  split_blender.py
models/nao_meshes_blue/: model.config  model.sdf.robocup3d  setup.sh
models/nao_meshes_blue/meshes/V40/collision/: HeadYaw.ply  LAnklePitch.dae  LElbowRollComplete.dae  LHipPitch.ply  LHipRoll.dae  LHipRoll.ply  LShoulderPitch.dae  LShoulderPitch.ply  LShoulderRoll.ply  LYawPitch.dae  LYawPitch.ply  PhalaxEnd.dae  RAnklePitch.ply  RAnkleRoll.dae  RAnkleRoll.ply  RHipPitch.dae  RHipPitch.ply  RHipRoll.ply  RHipYawPitch.ply  RKneePitch.dae  RKneePitch.ply  RShoulderPitch.dae  RYawPitch.dae  Torso.ply  WristYaw.ply
models/nao_meshes_blue/meshes/V40/visual/: HeadPitch.dae  HeadYaw.dae  LAnkleRoll.dae  LElbowRoll.dae  LHipPitch.dae  LHipRoll.dae  LHipYawPitch.dae  (+7 more)
models/nao_meshes_red/: model.config  model.sdf.mesh_collisions  model.sdf.robocup3d  model.sdf.simplified_collisions
robocup_3d/: CHANGELOG.rst  CMakeLists.txt  package.xml
robocup_agent_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
robocup_agent_plugin/include/robocup_agent_plugin/: AgentPlugin.hh
robocup_agent_plugin/src/: AgentPlugin.cc
robocup_clients/: CMakeLists.txt  package.xml  package.xml~
robocup_clients/src/: createAgent.cc
robocup_gamecontroller_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
robocup_gamecontroller_plugin/include/robocup_gamecontroller_plugin/: GameControllerPlugin.hh  MonitorIface.hh  SoccerField.hh  Socket.hh
robocup_gamecontroller_plugin/include/robocup_gamecontroller_plugin/states/: BeforeKickOffState.hh  CornerKickLeftState.hh  CornerKickRightState.hh  FreeKickLeftState.hh  FreeKickRightState.hh  GameOverState.hh  GoalKickLeftState.hh  GoalKickRightState.hh  GoalLeftState.hh  GoalRightState.hh  KickInLeftState.hh  KickInRightState.hh  KickOffLeftState.hh  KickOffRightState.hh  PlayState.hh  State.hh
robocup_gamecontroller_plugin/src/: GameControllerPlugin.cc  MonitorIface.cc  Socket.cc
robocup_gamecontroller_plugin/src/states/: BeforeKickOffState.cc  CornerKickLeftState.cc  CornerKickRightState.cc  FreeKickLeftState.cc  FreeKickRightState.cc  GameOverState.cc  GoalKickLeftState.cc  GoalKickRightState.cc  GoalLeftState.cc  GoalRightState.cc  KickInLeftState.cc  KickInRightState.cc  KickOffLeftState.cc  KickOffRightState.cc  PlayState.cc  State.cc
robocup_model_resources/: CHANGELOG.rst  CMakeLists.txt  package.xml
robocup_model_resources/env-hooks/: 10.gazebo.bash.in
robocup_model_resources/nao_models/: nao_soccer.sdf
robocup_model_resources/nao_models/nao_meshes/: model.config  nao.urdf  nao_simple_shapes.urdf
robocup_model_resources/nao_models/nao_meshes/meshes/V40/visual/: HeadPitch.dae  HeadYaw.dae  LAnklePitch.dae  LAnkleRoll.dae  LElbowRoll.dae  LFinger11.dae  LFinger13.dae  LFinger22.dae  LFinger23.dae  LHipPitch.dae  LShoulderPitch.dae  LShoulderRoll.dae  LThumb1.dae  LThumb2.dae  RElbowRoll.dae  RFinger13.dae  RHipRoll.dae  RHipYawPitch.dae  RKneePitch.dae  RShoulderPitch.dae  RShoulderRoll.dae  RThumb2.dae  Torso.dae  WristYaw.dae
robocup_model_resources/nao_models/nao_meshes/nao_meshes/: CMakeLists.txt  README  Uninstall NAO meshes.desktop  package.xml
robocup_model_resources/nao_models/nao_meshes/nao_meshes/meshes/V40/visual/: LFinger12.dae  LFinger21.dae  LHipRoll.dae  LHipYawPitch.dae  LKneePitch.dae  LWristYaw.dae  RAnklePitch.dae  RAnkleRoll.dae  RFinger11.dae  RFinger12.dae  RFinger21.dae  RFinger22.dae  RFinger23.dae  RHipPitch.dae  RThumb1.dae
robocup_model_resources/nao_models/nao_meshes/nao_meshes/scripts/: exportMeshes.py  io_export_collision.py  io_export_separate.py  normalize_meshes.py
robocup_model_resources/nao_models/nao_soccer/: nao_simple_shapes.urdf
robocup_model_resources/worlds/: robocup3d.world
robocup_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robocup_msgs/msg/: AgentPose.msg  AgentState.msg  Beam.msg  Bearing.msg  BodyPart.msg  CreateEffector.msg  ForceResistant.msg  GameState.msg  GameStateMonitor.msg  Hear.msg  InitPlayer.msg  Kickoff.msg  KillAgent.msg  Landmark.msg  Line.msg  MoveAgent.msg  PlayMode.msg  RobocupSyntheticVision.msg  Say.msg  Touch.msg
robocup_msgs/srv/: DropBall.srv  InitAgent.srv  KillAgent.srv  MoveAgentPose.srv  MoveBall.srv  SendJoints.srv  SetGameState.srv
robocup_teleoperator/: CMakeLists.txt  package.xml
robocup_teleoperator/src/: teleoperator.cc
robocup_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
robocup_utils/cmake/: config.py.in
robocup_utils/env-hooks/: 10.robocup_utils.bash.in
robocup_utils/src/: createAgent.cc  sExprInterface.py  spawnTeams.in
sExprInterface/: sExprInterface.py
worlds/: robocup_3Dsim.world
(+88 files in other folders)
