<?xml version="1.0"?>
<package>
  <name>robocup_model_resources</name>
  <version>0.0.7</version>
  <description>Model and world package for the Robocup 3D simulation league</description>

  <maintainer email="caguero@osrfoundation.org">Carlos Agüero</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>nao_meshes</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
