<?xml version="1.0"?>
<package>
  <name>robocup_utils</name>
  <version>0.0.4</version>
  <description>The robocup utils package</description>

  <maintainer email="caguero@osrfoundation.org">Carlos Agüero</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robocup_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robocup_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
