<package>
  <name>nao_meshes</name>
  <version>0.1.0</version>
  <description>meshes for the Aldebaran Robotics NAO</description>
  <author email="vrabaud@aldebaran-robotics.com">Vincent Rabaud</author>
  <maintainer email="vrabaud@aldebaran-robotics.com">Vincent Rabaud</maintainer>
  <license>Apache 2.0, BSD</license>

  <url>http://github.com/vrabaud/nao_meshes/</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
